<resources>
    <string name="app_name">UGSD-DIAMOND</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="image_to_describe">Image to describe</string>
    <string name="described_image">Described image</string>
    <string name="edit">Edit</string>
    <string name="uploaded_caps">UPLOADED</string>
    <string name="title_activity_video_demo">VideoDemoActivity</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello…!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account.</string>
    <string name="app_logo">App logo</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="surname">Surname</string>
    <string name="other_names">Other Names</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="participant_s_bio">Participant\'s Bio</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="please_choose_gender">Please choose gender</string>
    <string name="age_is_required">Please enter a number between 10 and 99</string>
    <string name="full_screen">Full screen</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_continue">Continue</string>
    <string name="next_image">Next image</string>
    <string name="previous_image">Previous image</string>
    <string name="next_participant">Next Participant</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="save">SAVE</string>
    <string name="stop">Stop</string>
    <string name="background_check">Background Check</string>
    <string name="checking_background_quality">Checking background quality…</string>
    <string name="silent_environment_message">This environment is okay. \Tap on "Continue"…</string>
    <string name="noisy_environment_message">This environment is too noisy.</string>
    <string name="record_participants">Record Audio</string>
    <string name="starting_recording_message">Start recording in a quiet environment here. \nWatch the demo video and rehearse before starting the recording.</string>
    <string name="previous_audios_message">All audios will be uploaded automatically when there\'s internet and the battery is not low.</string>
    <string name="recorded_audios">%1$d Recorded Audios</string>
    <string name="audios_to_validate">%1$d Audios to validate</string>
    <string name="transcriptions_to_resolute">%1$d Transcriptions to resolve</string>
    <string name="audios_to_transcribe">%1$d Audios to transcribe</string>
    <string name="background_noise_check_message">Checking background noise level. \nPlease be silent 3 seconds.</string>
    <string name="no_data_found">No data found.</string>
    <string name="update_local_images">Download Assigned Images</string>
    <string name="participant_bio">Participant\'s Bio</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="scheduled_local_image_update">Scheduled updates for local images</string>
    <string name="outdated_config_info">App configuration is not up to date. \nPlease connect to internet.</string>
    <string name="configurations_set">All configurations set</string>
    <string name="delete_uploaded">Delete Uploaded</string>
    <string name="audio_deletion_info">All your audios will be deleted from the phones local storage to free up more spaces.</string>
    <string name="choose_a_locale">Choose a locale</string>
    <string name="environment">Environment</string>
    <string name="select_environment">Select environment</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept_our">Accept Our</string>
    <string name="please_accept_our_privacy_policy">Please accept our privacy policy</string>
    <string name="momo_number">Momo Number</string>
    <string name="enter_a_validate_10_digit_ghanaian_momo_number">Enter a validate 10-digit Ghanaian momo number</string>
    <string name="network">Network</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="read_me">READ ME</string>
    <string name="video_instructions"> This is demo video for an audio description recording. Click "Continue" or "Skip" after watching.  </string>
    <string name="click_to_view_images">View all the downloaded images and their number of descriptions.</string>
    <string name="network_selection_icon">Network Selection Icon</string>
    <string name="update">Update</string>
    <string name="welcome_note">Welcome to our data collection app! This app allows you to easily contribute audio data in your local language for further research. \n\n<b>Register today to start contributing.</b></string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="airteltigo">AirtelTigo</string>
    <string name="vodafone">Vodafone</string>
    <string name="mtn">MTN</string>
    <string name="please_choose_the_network">Please choose the network</string>
    <string name="other_names_error">Please enter your other names</string>
    <string name="surname_error">Please enter surname</string>
    <string name="thank_you_for_participating">Thank you for participating.</string>
    <string name="saved_recording">Your recording will be automatically uploaded in the background. Thank you.</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="play_button">Play Button</string>
    <string name="locale">Locale</string>
    <string name="duration">Duration</string>
    <string name="audio_validation_message">Download and validate audios using our validation protocol.</string>
    <string name="audio_transcription_message">Download and transcribe audios word for word  in your locale.</string>
    <string name="audio_transcription_resolution_message">Download and resolve transcriptions in your locale.</string>
    <string name="home_screen_intro_text">Choose an activity below to start with.</string>
    <string name="audio_validation">Audio Validation</string>
    <string name="no_more_audios">No more audios</string>
    <string name="success">Success</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_choose_locale">Please choose locale</string>
    <string name="balance">Balance:<b>GHC %1$s</b></string>
    <string name="audios_validated">Audios Validated: <b>%1$d</b></string>
    <string name="audios_submitted">Audios Submitted: <b>%1$d</b></string>
    <string name="audios_accepted">Audios Accepted: <b>%1$d</b></string>
    <string name="audios_pending">Audios Pending: <b>%1$d</b></string>
    <string name="audios_rejected">Audios Rejected: <b>%1$d</b></string>
    <string name="balance_deduction">Est. Deduction: GHC <b>%1$s</b></string>
    <string name="clear_app_data">Clear app data.</string>
    <string name="play_privacy_policy">Play privacy policy</string>
    <string name="recorder">RECORDER</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="participant_momo">Participant Momo</string>
    <string name="numbers_do_not_match">Numbers do not match.</string>
    <string name="privacy_statement_audio">Privacy Statement Audio</string>
    <string name="maximum_noise_level">Maximum Noise Level</string>
    <string name="demo_video">Demo Video</string>
    <string name="configurations">Configurations</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="exit">Exit</string>
    <string name="image">Image</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password_intro">Kindly contact support via email to reset your password. \n\n<b>drhelegah@st.ug.edu.gh</b></string>
    <string name="send_email">Send Email</string>
    <string name="close_activity">Close activity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password_change_prompt">Please enter your new password to reset your account credentials.</string>
    <string name="submit">Submit</string>
    <string name="upload_audios">Upload Audios</string>
    <string name="can_record_less_than_120_per_participant">Can save less than 120 per participant</string>
    <string name="record_more_than_120">Record more than 120</string>
    <string name="number_of_recordings_per_participant">Number of recordings per participant</string>
    <string name="expected_number_of_validations">Expected Number of Validations</string>
    <string name="update_configuration">Update configuration</string>
    <string name="audio">Audio</string>
    <string name="back_button">Back button</string>
    <string name="this_audio_was_not_recorded_on_this_device">This audio is not saved on this device.</string>
    <string name="audios_you_uploaded">Audios You Uploaded</string>
    <string name="audios_you_validated">Audios You Validated</string>
    <string name="force_re_upload">Force re-upload all </string>
    <string name="upload_as_duplicate">Upload as duplicate</string>
    <string name="dagaare">Dagaare</string>
    <string name="dagbani">Dagbani</string>
    <string name="ikposo">Ikposo</string>
    <string name="ewe">Ewe</string>
    <string name="akan">Akan</string>
    <string name="start_validation">Start validation</string>
    <string name="download_assets">Download assets</string>
    <string name="refresh_my_list">Refresh my list</string>
    <string name="upload_validations">Upload validations</string>
    <string name="get_assigned_audios">Get assigned audios</string>
    <string name="validation_audios_availability">Audios assigned to you are only available for a limited time. If not validated, they may be reassigned to another user.</string>
    <string name="transcription_audios_availability">Audios assigned to you are only available for a limited time. If not transcribed, they may be reassigned to another user.</string>
    <string name="clear_all_pending">Clear all pending</string>
    <string name="ignore_this_version">Ignore this version.</string>
    <string name="do_not_show_again">Do not show again.</string>
    <string name="delete_audio">Delete audio</string>
    <string name="audio_transcription">Audio Transcription</string>
    <string name="audios_you_transcribed">Audios You Transcribed</string>
    <string name="start_transcription">Start transcription</string>
</resources>