<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_logo"
            android:foregroundTint="@color/gray_600"
            android:src="@drawable/ic_baseline_person_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/email_address">

            <EditText
                android:id="@+id/surnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_contacts_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray_600"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/surnameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname_error"
                android:textColor="@color/purple_700"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/other_names_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_contacts_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray_600"
                android:hint="@string/other_names"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/other_names_Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_names_error"
                android:textColor="@color/purple_700"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/momo_number" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="age"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/gray_600"
                android:hint="@string/momo_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/phone_error_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_a_validate_10_digit_ghanaian_momo_number"
                android:textColor="@color/purple_700"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/network" />

            <RadioGroup
                android:id="@+id/network_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/network_mtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mtn" />

                <RadioButton
                    android:id="@+id/network_vodafone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vodafone" />

                <RadioButton
                    android:id="@+id/network_airteltigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airteltigo" />
            </RadioGroup>

            <TextView
                android:id="@+id/network_error_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_choose_the_network"
                android:textColor="@color/purple_700"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/age_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="age"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/gray_600"
                    android:hint="@string/age"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/age_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_is_required"
                    android:textColor="@color/purple_700"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/gender_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other" />
                </RadioGroup>

                <TextView
                    android:id="@+id/gender_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_gender"
                    android:textColor="@color/purple_700"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/environment" />

                <Spinner
                    android:id="@+id/environment_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/environment_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_environment"
                    android:textColor="@color/purple_700"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/privacy_policy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/privacy_policy_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accept_our" />

                    <TextView
                        android:id="@+id/privacy_policy_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <TextView
                    android:id="@+id/privacy_policy_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_accept_our_privacy_policy"
                    android:textColor="@color/purple_700"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/error_message_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:visibility="gone"
                tools:text="Error message"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/update"
                    tools:enabled="false" />

                <ProgressBar
                    android:id="@+id/login_loading_process_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>