<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_me"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacy_policy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_instructions"
        android:textSize="16sp" />

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:text="@string/ok" />
</LinearLayout>